Colaboratory를 통해 생성됨

--- a/SSL_BARLOW_TWINS.ipynb
+++ b/SSL_BARLOW_TWINS.ipynb
@@ -4,8 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1B73e7TESGOu5BGlkTyoDBjjbyC6CuXu8",
-      "authorship_tag": "ABX9TyOb94JaBTLNmm+U7+uTK68a",
+      "authorship_tag": "ABX9TyPLNNGem8GX26NZcNY5GLbB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,29 +31,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 38,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 337
+          "base_uri": "https://localhost:8080/"
         },
         "id": "astlxpi83Eml",
-        "outputId": "25654eae-2a53-435b-bfb3-a7bac9705999"
+        "outputId": "a428da1f-a3dc-4de4-cd49-72afa7100d4e"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "MessageError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mMessageError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-d5df0069828e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdrive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdrive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/drive.py\u001b[0m in \u001b[0;36mmount\u001b[0;34m(mountpoint, force_remount, timeout_ms)\u001b[0m\n\u001b[1;32m    103\u001b[0m       \u001b[0mforce_remount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mforce_remount\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m       \u001b[0mtimeout_ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtimeout_ms\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 105\u001b[0;31m       ephemeral=True)\n\u001b[0m\u001b[1;32m    106\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/drive.py\u001b[0m in \u001b[0;36m_mount\u001b[0;34m(mountpoint, force_remount, timeout_ms, ephemeral)\u001b[0m\n\u001b[1;32m    118\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mephemeral\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m     _message.blocking_request(\n\u001b[0;32m--> 120\u001b[0;31m         'request_auth', request={'authType': 'dfs_ephemeral'}, timeout_sec=None)\n\u001b[0m\u001b[1;32m    121\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m   \u001b[0mmountpoint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_os\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpanduser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmountpoint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mblocking_request\u001b[0;34m(request_type, request, timeout_sec, parent)\u001b[0m\n\u001b[1;32m    169\u001b[0m   request_id = send_request(\n\u001b[1;32m    170\u001b[0m       request_type, request, parent=parent, expect_reply=True)\n\u001b[0;32m--> 171\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mread_reply_from_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequest_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_sec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mread_reply_from_input\u001b[0;34m(message_id, timeout_sec)\u001b[0m\n\u001b[1;32m    100\u001b[0m         reply.get('colab_msg_id') == message_id):\n\u001b[1;32m    101\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0;34m'error'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreply\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 102\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mMessageError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreply\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'error'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mreply\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mMessageError\u001b[0m: Error: credential propagation was unsuccessful"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -71,9 +63,93 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d3kdC74f4xE6",
-        "outputId": "84073740-8956-403a-8f9b-a593f5ec8175"
+        "outputId": "32de1e11-694b-44bd-89b6-09a7c94608b8"
       },
-      "execution_count": 8,
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/sample_data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. 먼저 csv 를 분해한다."
+      ],
+      "metadata": {
+        "id": "UT84rgB6FZmz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python /content/drive/MyDrive/sample_data/8x8data/split_csv_to_img.py"
+      ],
+      "metadata": {
+        "id": "_ALzDr9d96jn"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. resnet model run "
+      ],
+      "metadata": {
+        "id": "c4dN5PYHFgR5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python /content/drive/MyDrive/sample_data/ResNet18.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ViF_aXyhFjtG",
+        "outputId": "e606fda9-c516-4694-ecf5-15f4c90bcd10"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Traceback (most recent call last):\n",
+            "  File \"/content/drive/MyDrive/sample_data/ResNet18.py\", line 257, in <module>\n",
+            "    train_epochs=15,\n",
+            "  File \"/content/drive/MyDrive/sample_data/ResNet18.py\", line 124, in __init__\n",
+            "    self.train_ds, batch_size=self.batch_size, shuffle=True, pin_memory=True\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py\", line 353, in __init__\n",
+            "    sampler = RandomSampler(dataset, generator=generator)  # type: ignore[arg-type]\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/torch/utils/data/sampler.py\", line 108, in __init__\n",
+            "    \"value, but got num_samples={}\".format(self.num_samples))\n",
+            "ValueError: num_samples should be a positive integer value, but got num_samples=0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd /content/drive/MyDrive/sample_data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XoPwz47LH11u",
+        "outputId": "4e28b85d-7e7b-4a7b-c995-254004a45a42"
+      },
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,17 +163,6 @@
     {
       "cell_type": "code",
       "source": [
-        "!python /content/drive/MyDrive/sample_data/8x8data/split_csv_to_img.py"
-      ],
-      "metadata": {
-        "id": "_ALzDr9d96jn"
-      },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "!python /content/drive/MyDrive/sample_data/denoising_diffusion_pytorch.py"
       ],
       "metadata": {
@@ -105,9 +170,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0kURyCX55f18",
-        "outputId": "f215e347-337a-4623-cbe4-45714772c9fc"
+        "outputId": "89a3141a-82c5-4c7c-dd00-b3e4f6bff844"
       },
-      "execution_count": 9,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5Z7yGkYS-4j_",
-        "outputId": "322e8da3-fbc9-4048-e496-bcb3c307c1fa"
+        "outputId": "a44b28ee-f78f-4fc8-8517-f723b2af638b"
       },
-      "execution_count": 18,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +208,7 @@
             "<module 'torch.cuda.amp' from '/usr/local/lib/python3.7/dist-packages/torch/cuda/amp/__init__.py'>\n",
             "Traceback (most recent call last):\n",
             "  File \"/content/drive/MyDrive/sample_data/train_model.py\", line 32, in <module>\n",
-            "    run_exp(\"002\")\n",
+            "    run_exp(\"Moon\")\n",
             "  File \"/content/drive/MyDrive/sample_data/train_model.py\", line 26, in run_exp\n",
             "    results_folder=f\"{PATH}\\8x8data\\{name}\\\\results\",\n",
             "  File \"/content/drive/MyDrive/sample_data/denoising_diffusion_pytorch.py\", line 669, in __init__\n",
